visual: fix spacing between achievement history list and ads

--- a/Files/src/css/component/achievements/achievement-history.component.scss
+++ b/Files/src/css/component/achievements/achievement-history.component.scss
@@ -24,7 +24,7 @@
 		padding: 0;
 		margin: 0;
 		// height: 160px;
-		height: 210px;
+		height: 212px;
 		overflow-y: scroll;
 	}
 
